@startuml
skinparam classAttributeIconSize 0
skinparam classFontStyle bold

package "MongoDB/mini_projets_MongoDB" {

    class User {
        - id: int
        - firstName: string
        - lastName: string
        - email: string
        - password: string
        - isActive: boolean
        ---
        + setId()
        + setfirstName()
        + setLastName()
        + setEmail()
        + setPassword()
        + getId()
        + getfirstName()
        + getLastName()
        + getEmail()
        + getPassword()
    }

    class Comments {
        - id: int
        - title: string
        - content: string
        - createdAt: datetime
        - userId: User
        - postId: Post
        ---
        + setId()
        + setComment()
        + setCreatedAt()
        + setUserId()
        + setPostId()
        + getId()
        + getComment()
        + getCreatedAt()
        + getUserId()
        + getPostId()
    }

    class Post {
        id: int
        title: string
        content: string
        authorId : int
        likes: int
        views: int
        tags : Array(string)
        createdAt: datetime
        userId: User
        ---
        + setId()
        + setTitle()
        + setContent()
        + setCreatedAt()
        + setUserId()
        + getId()
        + getTitle()
        + getContent()
        + getCreatedAt()
        + getUserId()
        }

    User "1..n" -- "1..1" Post: create
    User "1..n" -- "1..1" Comment: create
    Post "1..n" -- "1..1" Comment: has

}


